# rent-vs-buy

./: .flake8  .gitignore  README.md  pyproject.toml
notebooks/: rent_control.ipynb  rent_vs_buy.ipynb
rent_vs_buy/: buy.py  rent.py  utils.py
tests/: test_rent_vs_buy.py
