[tool.poetry]
name = "rent-vs-buy"
version = "0.1.0"
description = ""
authors = ["Bram Evert <bram.evert@gmail.com>"]

[tool.poetry.dependencies]
numpy = "^1.21.0"
pandas = "^1.3.3"
plotly = "^5.3.1"
python = "^3.8"


[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^3.9.2"
pytest = "^5.2"
python-lsp-server = { version = ">=1.2.2", extras = ["all"] }
jupyterlab = ">=3.1.0"
jupyterlab-git = ">=0.32.4"
jupyterlab-lsp = ">=3.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
